--- a/trunk/libs/libcurl/Makefile
+++ b/trunk/libs/libcurl/Makefile
@@ -1,11 +1,9 @@
-SRC_NAME=curl-7.86.0
-
-SRC_URL=https://github.com/curl/curl/releases/download/curl-7_86_0/$(SRC_NAME).tar.xz
+SRC_NAME=curl-8.8.0
+SRC_URL=https://github.com/curl/curl/releases/download/curl-8_8_0/curl-8.8.0.tar.xz
 
 LDFLAGS += -Wl,-rpath-link=$(STAGEDIR)/lib
 
-#all: download_test extract_test config_test
-all: config_test
+all: download_test extract_test config_test
 	$(MAKE) -j$(HOST_NCPU) -C $(SRC_NAME)
 
 download_test:
@@ -16,7 +14,7 @@ download_test:
 extract_test:
 	( if [ ! -d $(SRC_NAME) ]; then \
 		tar xf $(SRC_NAME).tar.xz; \
-		patch -d $(SRC_NAME) -p1 -i ../no_docs_test.patch; \
+	#	patch -d $(SRC_NAME) -p1 -i ../no_docs_test.patch; \
 	fi )
 
 config_test:
@@ -52,15 +50,18 @@ configure:
 		--disable-tls-srp \
 		--disable-libcurl-option \
 		--disable-threaded-resolver \
+		--disable-docs \
 		--without-gnutls \
 		--without-libidn \
 		--without-libssh2 \
+		--without-libpsl \
 		--without-krb4 \
 		--without-nss \
+		--without-ca-path \
+		--with-ca-bundle=/etc/ssl/certs/ca-certificates.crt \
 		--with-random=/dev/urandom \
 		--with-zlib=$(STAGEDIR) \
 		--with-ssl=$(STAGEDIR) \
-		--with-ca-bundle=/etc/ssl/cert.pem \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
