--- a/trunk/configs/boards/NEWIFI3/kernel-3.4.x.config
+++ b/trunk/configs/boards/NEWIFI3/kernel-3.4.x.config
@@ -2055,6 +2055,7 @@ CONFIG_RT_MAX_CLIENTS=48
 # CONFIG_RT_BAND_STEERING is not set
 CONFIG_RT_DOT11R_FT=y
 CONFIG_RT_DOT11K_RRM=y
+CONFIG_RT_DOT11W_PMF=y
 CONFIG_WNM_SUPPORT=y
 CONFIG_RT_80211N_DRAFT3=y
 # CONFIG_RT_80211W_PMF is not set
